# FancyFolium

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: release.yml  tests.yml
docs/: author.rst  conf.py  examples.md  getting-started.md  index.rst
docs/_static/example/: index.html
docs/api/: background.rst  color.rst  geo.rst  map.rst  marker.rst  raster.rst  raster_utils.rst  vector.rst
src/FancyFolium/: __init__.py  map.py  map_core.py
src/FancyFolium/assets/: map_controls.css  map_controls.js
src/FancyFolium/layers/: __init__.py  background.py  marker.py  raster.py  vector.py
src/FancyFolium/utils/: __init__.py  color.py  geo.py  raster.py  tiles.py
tests/: conftest.py  test_background_layer.py  test_color.py  test_geo.py  test_integration_example_data.py  test_map.py  test_map_core.py  test_marker_layer.py  test_raster_layer.py  test_vector_layer.py
