[project]
name = "fancyfolium"
version = "1.0.0"
description = "Composable Folium mapping library with a custom layer control, automatic legends, emoji markers, a statistics panel, and vector-to-raster conversion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Miguel Ureña Pliego" },
]
keywords = ["folium", "leaflet", "geopandas", "gis", "maps", "geospatial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "shapely>=2.0.7",
    "pandas>=2.3.3",
    "numpy>=2.0.2",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
# Raster I/O (raster_layer / vector_to_raster) - every rasterio import in the
# package is lazy, so importing FancyFolium itself never requires this.
raster = [
    "rasterio>=1.4.3",
]
# Convenience extras used by the example notebook only.
notebook = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "mapclassify>=2.8.1",
]
all = [
    "fancyfolium[raster,notebook]",
]

[project.urls]
Homepage = "https://github.com/GeomaticsCaminosUPM/FancyFolium"
Documentation = "https://github.com/GeomaticsCaminosUPM/FancyFolium#readme"
Repository = "https://github.com/GeomaticsCaminosUPM/FancyFolium"
Author = "https://miguelurenapliego.github.io/"
"Research group" = "https://blogs.upm.es/aga/en/"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "fancyfolium[raster,notebook]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/FancyFolium"]

[tool.hatch.build]
include = [
    "src/FancyFolium/**/*.py",
    "src/FancyFolium/assets/*.css",
    "src/FancyFolium/assets/*.js",
]
